5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1582_1332.log
== TEST (2019-03-12 17:32:49) 
-- CODE:
a= 3*5 **2 
A= 3/2*(a**0,5)
 
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    A= 3/2*(a**0,5)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:48) 
-- CODE:
aresta = 3*5**2
area = 
 
print(round(aresta, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:33:59) 
-- CODE:
aresta = 3*5**2

 
print(round(aresta, 4))
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:16) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:18) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.187135
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:20) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:59) 
-- CODE:
aresta = (3*5**2)
area = 3/2 * (aresta**0.5)
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:01) 
-- CODE:
aresta = (3*5**2)
area = 3/2 * (aresta**0.5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.143026
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:32) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:34) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.122115
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:34) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.114113
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.130174
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.09323
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:35) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.1127
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.106511
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.117111
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:36) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.104415
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:46) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:46) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:47) 
-- CODE:
aresta = (3*5**2)**0.5
area = 3/2 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:49:14) 
-- CODE:
aresta = (3*5**2)**0.5
area = 1.5 * aresta
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:49:19) 
-- CODE:
aresta = (3*5**2)**0.5
area = 1.5 * aresta
 
print(round(area, 4))
-- EXECUTION TIME:
0.219096
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:49:43) 
-- CODE:
aresta = (3*5**2)**0.5
area = aresta * 3/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:49:45) 
-- CODE:
aresta = (3*5**2)**0.5
area = aresta * 3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.2833
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:53:45) 
-- CODE:
aresta = 3*5**2
area = (aresta * 3/2)**0.5
 
print(round(area, 4))
-- OUTPUT:
10.6066
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:53:47) 
-- CODE:
aresta = 3*5**2
area = (aresta * 3/2)**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.136119
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.6066
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:11) 
-- CODE:
aresta = 3*5**2
area = (aresta)**0.5 * 3/2
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:54:14) 
-- CODE:
aresta = 3*5**2
area = (aresta)**0.5 * 3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.141646
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:54:28) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- EXECUTION TIME:
0.153497
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:29) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:54:29) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- EXECUTION TIME:
0.179339
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:29) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:30) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:31) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:54:31) 
-- CODE:
aresta = 3*5**2
area = 3/2*(aresta)**0.5 
 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:09:12) 
-- CODE:
aresta = (3*5**2)**0.5
area = aresta * 3//2
 
print(round(area, 4))
-- OUTPUT:
12.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:09:15) 
-- CODE:
aresta = (3*5**2)**0.5
area = aresta * 3//2
 
print(round(area, 4))
-- EXECUTION TIME:
0.162743
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:10:12) 
-- CODE:
aresta = 3*(5**2)**0.5
area = aresta * 3/2
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:10:15) 
-- CODE:
aresta = 3*(5**2)**0.5
area = aresta * 3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.131514
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 13:11:02) 
-- CODE:
aresta = (3* (5**2)**0.5)
area = aresta * 3/2
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 13:11:03) 
-- CODE:
aresta = (3* (5**2)**0.5)
area = aresta * 3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.195616
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:09:27) 
-- CODE:
aresta = (3**0.5) 5**2
area = aresta * 3/2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = (3**0.5) 5**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:09:38) 
-- CODE:
aresta = (3**0.5)*5**2
area = aresta * 3/2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:09:40) 
-- CODE:
aresta = (3**0.5)*5**2
area = aresta * 3/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.193654
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
